testsuite/tests/overloadedlists/should_fail/overloadedlistsfail01.hs
{-# LANGUAGE OverloadedLists #-}

-- This will fail because there is no type defaulting implemented as of yet.

main = print [1]
